[gd_scene load_steps=10 format=3 uid="uid://byagdc3ou6p7f"]

[ext_resource type="Script" path="res://Core/Pickable/GD_dialogSystem.gd" id="1_5xqdp"]
[ext_resource type="Material" uid="uid://vs4cep5xkb76" path="res://Art/Character/Dalek/M_DalekBase.tres" id="2_8qy0b"]
[ext_resource type="PackedScene" uid="uid://crcn0gw24r2jl" path="res://Art/Character/Dalek/Dalek.blend" id="2_imc5e"]
[ext_resource type="Material" uid="uid://du8583sh5dybr" path="res://Art/Character/Dalek/M_DalekTop.tres" id="3_cu2fx"]
[ext_resource type="Script" path="res://Core/Animation/GD_MainLayer.gd" id="4_2i4tn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xkyet"]
radius = 1.0
height = 3.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_84stb"]
points = PackedVector3Array(0.68143, 0.146855, 0.000593305, 0.514242, 1.15258, -0.163805, 0.496228, 1.22061, -0.111067, 0.487956, 1.22132, -0.0586552, 0.596702, 0.146855, 0.305625, 0.68143, -8.17835e-05, 0.000593305, 0.68143, 0.146855, -0.641048, 0.515976, 1.15138, -0.220775, 0.501966, 1.22025, -0.166247, -0.488888, 1.22085, -0.0593063, -0.0264183, 1.16525, 0.388476, 0.0361605, 1.16501, 0.387336, 0.103409, 1.16501, 0.373012, 0.160251, 1.16525, 0.351689, 0.213489, 1.16549, 0.32646, 0.266461, 1.16525, 0.294231, 0.314897, 1.16561, 0.258747, 0.357194, 1.16585, 0.215288, 0.394688, 1.16537, 0.169875, 0.430714, 1.16585, 0.117788, 0.461003, 1.16549, 0.0648877, 0.479683, 1.16597, 0.0067786, 0.501165, 1.22025, -0.275303, 0.463538, 1.22013, -0.44784, 0.341716, 1.22013, -0.570406, 0.240176, 1.22025, -0.608983, 0.141837, 1.22037, -0.628515, -0.347452, 1.22073, -0.56715, 0.385214, 0.146855, 0.623028, 0.596702, -8.17835e-05, 0.305625, 0.68143, -8.17835e-05, -0.641048, 0.353458, 0.146855, -0.84386, 0.400159, 0.978622, -0.615982, 0.408031, 0.978622, -0.609308, 0.431782, 1.21929, -0.498787, 0.486488, 1.21989, -0.385824, 0.496629, 1.21965, -0.333086, 0.515843, 1.15019, -0.277907, 0.5033, 1.21977, -0.221263, -0.465805, 1.16585, 0.051215, -0.443388, 1.16465, 0.100209, -0.40883, 1.16513, 0.151319, -0.373471, 1.1643, 0.195267, -0.335977, 1.16465, 0.239215, -0.246845, 1.16537, 0.308555, -0.142636, 1.16525, 0.35934, -0.503299, 1.22037, -0.220449, -0.497294, 1.22037, -0.112695, -0.681562, 0.146855, 0.000593305, -0.596833, 0.146855, 0.305625, -0.0844606, 1.1637, 0.377896, -0.000132561, 0.146855, 0.818841, 0.389351, 1.21953, -0.539317, 0.39242, 0.97647, -0.62119, 0.387483, 0.985197, -0.621028, 0.291813, 1.22001, -0.593194, 0.135566, 0.969535, -0.697692, 0.191473, 1.21965, -0.619563, 0.0928684, 1.21989, -0.635351, 0.0430989, 1.22025, -0.640723, -0.104609, 1.22025, -0.634375, -0.202146, 1.22025, -0.618098, -0.250181, 1.22013, -0.606866, -0.301152, 1.22013, -0.590101, -0.387614, 0.985197, -0.621028, -0.392551, 0.97647, -0.62119, -0.40029, 0.978622, -0.615982, -0.39522, 1.21965, -0.534271, -0.434315, 1.21953, -0.496671, -0.466739, 1.21989, -0.443119, -0.496894, 1.22001, -0.329668, 0.385214, -8.17835e-05, 0.623028, 0.353458, -8.17835e-05, -0.84386, -0.35359, 0.146855, -0.84386, 0.117686, 0.964275, -0.699808, 0.126226, 0.968579, -0.698832, 0.379343, 0.979458, -0.625911, 0.385748, 0.971209, -0.625422, -0.385346, 0.146855, 0.623028, -0.292745, 1.16418, 0.273885, -0.196008, 1.16501, 0.333785, -0.502098, 1.22013, -0.274977, -0.515974, 1.15043, -0.273838, -0.515307, 1.15174, -0.218821, -0.514106, 1.15294, -0.163805, -0.502365, 1.21989, -0.166735, -0.681562, -8.17835e-05, 0.000593305, -0.681562, 0.146855, -0.641048, -0.596833, -8.17835e-05, 0.305625, -0.000132561, -8.17835e-05, 0.818841, -0.00667065, 1.22013, -0.64235, -0.0555062, 1.22001, -0.639583, -0.13463, 0.9681, -0.698344, -0.137432, 0.977187, -0.695576, -0.15291, 1.22013, -0.627538, -0.147573, 0.972763, -0.6946, -0.379475, 0.979458, -0.625911, -0.38588, 0.971209, -0.625422, -0.408163, 0.978622, -0.609308, -0.486353, 1.21977, -0.385336, -0.35359, -8.17835e-05, -0.84386, -0.14317, 0.963796, -0.697855, -0.125157, 0.969057, -0.698832, -0.385346, -8.17835e-05, 0.623028, -0.681562, -8.17835e-05, -0.641048)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_58t23"]
points = PackedVector3Array(-0.00436875, 1.13434, -0.621717, 0.0843599, 1.13434, -0.614146, -0.0916978, 1.13434, -0.613458, -0.100375, 1.24136, -0.622578, -0.0461673, 1.24301, -0.625503, 0.038736, 1.2426, -0.626535, 0.100314, 1.24136, -0.622578, 0.171969, 1.13434, -0.60038, -0.177534, 1.13434, -0.599004, -0.262811, 1.13434, -0.575946, -0.182292, 1.24095, -0.600208, -0.17063, 1.26285, -0.600036, -0.110545, 1.26542, -0.616039, -0.0738775, 1.67604, -0.556846, -0.0478467, 1.53879, -0.585926, 0.0276332, 1.26583, -0.623782, 0.0371499, 1.5391, -0.587131, 0.110484, 1.26542, -0.616039, 0.170569, 1.26285, -0.600036, 0.182139, 1.24095, -0.600208, 0.259018, 1.13434, -0.576978, 0.0743768, 1.67614, -0.556846, -0.236593, 1.24003, -0.580592, -0.340716, 1.13434, -0.525872, -0.361149, 1.24434, -0.51159, -0.167738, 1.53612, -0.554437, -0.12202, 1.67604, -0.544284, -0.115863, 1.79375, -0.5257, -0.0701455, 1.79375, -0.537401, -0.0233087, 1.79386, -0.543424, 0.0239013, 1.79386, -0.543424, 0.070738, 1.79386, -0.537573, 0.12252, 1.67624, -0.544628, 0.236533, 1.24003, -0.580592, 0.167677, 1.53612, -0.554437, 0.310427, 1.24003, -0.53895, 0.364261, 1.2427, -0.507288, 0.338697, 1.13434, -0.527421, -0.159807, 1.79375, -0.508321, -0.412184, 1.13434, -0.461173, -0.201139, 1.79365, -0.485435, -0.414237, 1.24116, -0.445514, -0.303769, 1.79365, -0.388902, -0.273727, 1.79365, -0.425381, -0.239299, 1.79365, -0.457731, -0.108585, 1.95825, -0.45016, -0.0727579, 1.95969, -0.461001, -0.0357176, 1.96071, -0.467367, 0.00197569, 1.96113, -0.469604, 0.0394824, 1.96082, -0.467367, 0.116455, 1.79396, -0.525872, 0.0765226, 1.95979, -0.460829, 0.1604, 1.79396, -0.508493, 0.201732, 1.79396, -0.485779, 0.298764, 1.26306, -0.541015, 0.239985, 1.79396, -0.458075, 0.274413, 1.79406, -0.425726, 0.304549, 1.79406, -0.389418, 0.418002, 1.2428, -0.441556, 0.411471, 1.13434, -0.462721, -0.14264, 1.9564, -0.43519, -0.450158, 1.13434, -0.37634, -0.438495, 1.24157, -0.391827, -0.313659, 2.14618, -0.211494, -0.174362, 1.95444, -0.416434, -0.329054, 1.79355, -0.348981, -0.336145, 2.12603, -0.190845, -0.332693, 2.12911, -0.196868, -0.328681, 2.13271, -0.20203, -0.324016, 2.13683, -0.20616, -0.318977, 2.14135, -0.209429, -0.135176, 1.99197, -0.417466, -0.10308, 1.99485, -0.430544, -0.0690259, 1.99731, -0.44018, -0.0338517, 1.99896, -0.445858, 0.00197569, 1.99958, -0.447751, 0.0376164, 1.99906, -0.445858, 0.11235, 1.95835, -0.45016, 0.0727906, 1.99742, -0.440008, 0.106845, 1.99495, -0.430544, 0.146405, 1.9565, -0.43519, 0.178127, 1.95455, -0.416434, 0.313599, 2.14618, -0.211494, 0.318917, 2.14135, -0.209429, 0.323955, 2.13683, -0.20616, 0.329926, 1.79406, -0.349669, 0.328527, 2.13271, -0.20203, 0.439741, 1.24034, -0.387869, 0.450004, 1.13434, -0.376513, 0.332632, 2.12911, -0.196868, 0.335991, 2.12603, -0.190845, -0.308155, 2.15112, -0.212526, -0.468631, 1.24003, -0.312501, -0.47227, 1.13434, -0.285314, -0.315432, 2.1506, -0.19205, -0.308808, 2.15656, -0.193426, -0.338757, 2.12367, -0.184306, -0.326162, 2.14094, -0.181897, -0.321403, 2.14526, -0.188092, -0.302557, 2.15615, -0.212354, -0.0972959, 2.03062, -0.404044, -0.0652938, 2.03443, -0.41196, -0.297052, 2.16098, -0.210978, -0.0319856, 2.0369, -0.416606, 0.00197569, 2.03772, -0.417982, 0.0357504, 2.0369, -0.416434, 0.0690586, 2.03453, -0.411788, 0.139034, 1.99197, -0.417466, 0.101061, 2.03073, -0.404044, 0.296991, 2.16098, -0.210978, 0.302496, 2.15615, -0.212354, 0.308001, 2.15112, -0.212526, 0.308654, 2.15656, -0.193426, 0.315278, 2.1506, -0.19205, 0.321249, 2.14526, -0.188092, 0.470437, 1.24136, -0.308888, 0.472303, 1.13434, -0.284281, 0.326101, 2.14094, -0.181897, 0.338697, 2.12367, -0.184306, -0.473669, 1.23951, -0.257438, -0.341649, 2.1211, -0.169852, -0.340623, 2.12202, -0.177251, -0.476468, 1.13434, -0.193942, -0.291454, 2.17188, -0.181381, -0.302183, 2.16242, -0.191878, -0.32159, 2.14464, -0.141632, -0.288562, 2.17425, -0.15557, -0.32924, 2.13806, -0.17381, -0.329334, 2.13785, -0.156086, -0.0629613, 2.06116, -0.384944, -0.291827, 2.16571, -0.208397, -0.030866, 2.06414, -0.38873, 0.00197569, 2.06517, -0.389934, 0.0346308, 2.06414, -0.38873, 0.0667261, 2.06116, -0.384944, 0.291673, 2.16571, -0.208397, 0.30203, 2.16242, -0.191878, 0.296152, 2.16767, -0.187748, 0.291393, 2.17188, -0.181381, 0.340563, 2.12202, -0.177251, 0.341589, 2.1211, -0.169852, 0.473422, 1.23797, -0.252447, 0.476594, 1.13434, -0.191017, 0.302309, 2.1617, -0.13733, 0.315558, 2.14988, -0.137502, 0.32918, 2.13785, -0.156086, 0.330206, 2.13703, -0.165034, 0.32918, 2.13806, -0.17381, -0.476095, 1.23633, -0.172605, -0.341836, 2.12089, -0.162281, -0.330267, 2.13703, -0.165034, -0.460421, 1.13434, -0.0693612, -0.372439, 1.184, 1.13034, -0.389606, 1.19726, 1.13034, -0.403601, 1.21525, 1.13034, -0.412278, 1.23663, 1.13034, -0.414797, 1.26028, 1.13034, -0.273074, 2.18247, -0.181897, -0.275499, 2.18031, -0.18878, -0.278578, 2.17754, -0.194803, -0.282497, 2.17404, -0.200309, -0.296212, 2.16767, -0.187748, -0.288468, 2.17445, -0.173294, -0.286882, 2.17014, -0.204955, -0.326255, 2.14042, -0.147999, -0.333905, 2.12798, -0.134749, -0.33008, 2.13138, -0.129415, -0.325695, 2.13539, -0.124769, -0.32075, 2.13981, -0.121155, -0.315619, 2.14988, -0.137502, -0.30237, 2.1617, -0.13733, -0.296399, 2.16705, -0.141288, -0.29164, 2.17137, -0.147483, -0.276432, 2.17949, -0.138879, -0.27382, 2.18186, -0.145418, -0.271954, 2.1835, -0.152473, -0.270928, 2.18443, -0.159872, -0.287442, 2.17528, -0.164346, -0.34109, 2.12161, -0.154882, -0.339504, 2.12295, -0.147655, -0.337078, 2.1251, -0.140944, -0.0300263, 2.08799, -0.357757, 0.00197569, 2.08922, -0.358789, 0.0337911, 2.08799, -0.357757, 0.286822, 2.17014, -0.204955, 0.282343, 2.17404, -0.200309, 0.278518, 2.17754, -0.194803, 0.275346, 2.18031, -0.18878, 0.273013, 2.18247, -0.181897, 0.288408, 2.17445, -0.173294, 0.287381, 2.17528, -0.164346, 0.476688, 1.23776, -0.167615, 0.341682, 2.12089, -0.162281, 0.458681, 1.13434, -0.0561115, 0.428265, 1.16971, 0.272033, 0.288408, 2.17425, -0.15557, 0.291487, 2.17137, -0.147483, 0.296245, 2.16705, -0.141288, 0.288408, 2.1687, -0.123392, 0.293446, 2.16417, -0.120295, 0.298764, 2.15934, -0.118058, 0.304362, 2.15441, -0.117198, 0.308934, 2.15574, -0.135954, 0.315371, 2.14454, -0.118746, 0.32069, 2.13981, -0.121155, 0.321436, 2.14464, -0.141632, 0.326194, 2.14042, -0.147999, 0.337017, 2.1251, -0.140944, 0.33935, 2.12295, -0.147655, 0.340936, 2.12161, -0.154882, -0.411158, 1.283, 1.13034, -0.425153, 1.13434, 0.0402497, -0.332972, 1.17279, 1.13034, -0.352939, 1.17587, 1.13034, -0.352286, 1.17731, 1.13137, -0.371506, 1.18533, 1.13137, -0.388393, 1.19829, 1.13137, -0.402201, 1.21597, 1.13137, -0.410598, 1.23694, 1.13137, -0.413117, 1.26007, 1.13137, -0.409665, 1.28218, 1.13137, -0.271488, 2.18391, -0.17467, 0.00197569, 2.10958, -0.324718, -0.270741, 2.18463, -0.167271, -0.401548, 1.30315, 1.13034, -0.0530715, 2.09159, 0.660403, -0.0466338, 2.10012, 0.660403, -0.315525, 2.14454, -0.118746, -0.308994, 2.15574, -0.135954, -0.298918, 2.15934, -0.118058, -0.293506, 2.16417, -0.120295, -0.288468, 2.1687, -0.123392, -0.283897, 2.17281, -0.127694, -0.279885, 2.17641, -0.132856, -0.0296531, 2.11328, 0.660231, -0.0197633, 2.11739, 0.660231, -0.0214427, 2.12181, 0.632527, -0.0101534, 2.12439, 0.632527, 0.00132257, 2.125, 0.632527, 0.00141588, 2.12634, 0.615664, 0.270774, 2.18443, -0.159872, 0.271427, 2.18391, -0.17467, 0.270681, 2.18463, -0.167271, 0.2718, 2.1835, -0.152473, 0.421547, 1.34376, 0.237446, 0.383947, 1.25781, 0.688451, 0.42416, 1.13434, 0.0419704, 0.428078, 1.16786, 0.267215, 0.383667, 1.25606, 0.688451, 0.369952, 1.22286, 0.688451, 0.369112, 1.22132, 0.688451, 0.273666, 2.18186, -0.145418, 0.276372, 2.17949, -0.138879, 0.279731, 2.17641, -0.132856, 0.283836, 2.17281, -0.127694, 0.0319251, 2.11092, 0.660231, 0.0404154, 2.10444, 0.660231, 0.309867, 2.14937, -0.11737, 0.0477861, 2.09652, 0.660231, 0.325541, 2.13539, -0.124769, 0.33002, 2.13138, -0.129415, 0.333845, 2.12798, -0.134749, 0.381148, 1.25966, 0.696366, 0.381615, 1.25802, 0.69671, 0.383481, 1.25946, 0.688451, -0.400429, 1.30192, 1.13137, -0.375424, 1.13434, 0.140224, -0.313473, 1.17413, 1.13034, -0.332599, 1.17443, 1.13137, -0.315899, 1.13434, 0.20372, -0.252641, 1.13434, 0.261536, 0.249315, 1.13434, 0.264117, -0.387833, 1.31754, 1.13137, -0.388673, 1.31898, 1.13034, -0.0429018, 2.09694, 0.674169, -0.048873, 2.08902, 0.674169, -0.0356244, 2.10362, 0.674169, -0.0387033, 2.10742, 0.660231, -0.310021, 2.14937, -0.11737, -0.304423, 2.15441, -0.117198, -0.0273206, 2.10896, 0.674169, -0.0181772, 2.11277, 0.674169, -0.00931367, 2.11976, 0.660231, 0.00141588, 2.12027, 0.660231, 0.0127985, 2.12356, 0.632527, 0.368739, 1.13434, 0.147279, 0.36762, 1.22029, 0.688451, 0.334591, 1.20651, 0.688451, 0.332912, 1.206, 0.688451, 0.381335, 1.25617, 0.696538, 0.368459, 1.22461, 0.696366, 0.36762, 1.22317, 0.69671, 0.366127, 1.22204, 0.696538, 0.0239013, 2.12027, 0.632527, 0.0223151, 2.11575, 0.660231, 0.0205424, 2.11123, 0.674169, 0.029406, 2.1066, 0.674169, 0.0372432, 2.10064, 0.674169, 0.0439608, 2.09344, 0.674169, 0.0535707, 2.08748, 0.660231, 0.0577693, 2.07761, 0.660231, 0.0531043, 2.07596, 0.674169, 0.346254, 1.2645, 0.773971, 0.34728, 1.26151, 0.773971, 0.347747, 1.25833, 0.773971, 0.34756, 1.25514, 0.773971, -0.295279, 1.18009, 1.13034, -0.313379, 1.17577, 1.13137, 0.310706, 1.13434, 0.209054, 0.333005, 1.20846, 0.69671, -0.372439, 1.32937, 1.13137, -0.373185, 1.33081, 1.13034, -0.355644, 1.33852, 1.13034, -0.00856724, 2.11493, 0.674169, 0.00132257, 2.11534, 0.674169, 0.0120521, 2.11894, 0.660231, 0.334685, 1.20888, 0.696366, 0.34672, 1.25216, 0.773971, 0.345228, 1.24928, 0.773971, 0.343268, 1.24681, 0.773971, 0.340749, 1.24486, 0.773971, 0.33795, 1.24342, 0.773971, 0.0111191, 2.1141, 0.674169, -0.30237, 1.33626, 1.13137, -0.287255, 1.32916, 1.13137, -0.2741, 1.31929, 1.13137, 0.049279, 2.08511, 0.674169, -0.263091, 1.30716, 1.13137, -0.261691, 1.30809, 1.13034, -0.253201, 1.2938, 1.13034, -0.247603, 1.27848, 1.13034, -0.246763, 1.26244, 1.13137, -0.247229, 1.24661, 1.13137, -0.24555, 1.24609, 1.13034, -0.250868, 1.23077, 1.13137, -0.279511, 1.18934, 1.13034, -0.295466, 1.18173, 1.13137, -0.355178, 1.33687, 1.13137, -0.337078, 1.34057, 1.13137, -0.337171, 1.34222, 1.13034, -0.319351, 1.34037, 1.13137, -0.249469, 1.22995, 1.13034, -0.256466, 1.21494, 1.13034, -0.266449, 1.20127, 1.13034, -0.254694, 1.29318, 1.13137, -0.249282, 1.27817, 1.13137, -0.257679, 1.21618, 1.13137, -0.280071, 1.19099, 1.13137, -0.267289, 1.20271, 1.13137)

[sub_resource type="BoxShape3D" id="BoxShape3D_1leqt"]
size = Vector3(4.02954, 3.40625, 5.30859)

[node name="dalek" type="Area3D" groups=["Interactable"]]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0)
script = ExtResource("1_5xqdp")
text = PackedStringArray("Identify Yourself!", "Obey!", "Exterminate!")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07941, 0)
shape = SubResource("CapsuleShape3D_xkyet")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6154, 1.66978, 0.659674)
visible = false
billboard = 1
no_depth_test = true
modulate = Color(1, 1, 1, 0.513726)
text = "E"
outline_size = 0

[node name="Dalek" parent="." instance=ExtResource("2_imc5e")]

[node name="Skeleton3D" parent="Dalek/skel" index="0"]
bones/2/position = Vector3(-0.330073, 1.2544, 0.390135)
bones/2/rotation = Quaternion(-1.42216e-07, 3.71692e-17, 2.02792e-24, 1)
bones/6/rotation = Quaternion(-2.20134e-08, 3.71683e-17, -1.50002e-24, 1)
bones/8/rotation = Quaternion(1.46818e-07, 0.341625, 5.97377e-08, 0.939836)
bones/9/rotation = Quaternion(0.0186301, -9.64233e-11, -0.00165382, 0.999825)

[node name="Object_6" parent="Dalek/skel/Skeleton3D" index="0"]
surface_material_override/0 = ExtResource("2_8qy0b")

[node name="StaticBody3D" type="StaticBody3D" parent="Dalek/skel/Skeleton3D/Object_6" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Dalek/skel/Skeleton3D/Object_6/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_84stb")

[node name="Object_7" parent="Dalek/skel/Skeleton3D" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
surface_material_override/0 = ExtResource("3_cu2fx")

[node name="StaticBody3D" type="StaticBody3D" parent="Dalek/skel/Skeleton3D/Object_7" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Dalek/skel/Skeleton3D/Object_7/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_58t23")

[node name="MainLayer" type="SkeletonModifier3D" parent="Dalek/skel/Skeleton3D" index="2" node_paths=PackedStringArray("target_coordinate")]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 0.7
script = ExtResource("4_2i4tn")
bonehead = "dalekhead"
boneeye = "dalekEye"
target_coordinate = NodePath("Marker3D")

[node name="Marker3D" type="Marker3D" parent="Dalek/skel/Skeleton3D/MainLayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.97995, 1.84792)

[node name="AnimationPlayer" parent="Dalek" index="1"]
autoplay = "Dalek_Idle"

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.29862, 2.30558)
shape = SubResource("BoxShape3D_1leqt")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="child_entered_tree" from="Area3D/CollisionShape3D" to="." method="_on_collision_shape_3d_child_entered_tree"]
[connection signal="child_exiting_tree" from="Area3D/CollisionShape3D" to="." method="_on_collision_shape_3d_child_exiting_tree"]

[editable path="Dalek"]
